working on overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 @import './sass/variables';
 
 .app {
+    display: flex;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
     max-height: 100%;
